--- a/01_introduccion_a_django.ipynb
+++ b/01_introduccion_a_django.ipynb
@@ -215,28 +215,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* La siguiente celda moverá la ejecución de esta notebook al subdirectorio ```tutorial```."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [],
-   "source": [
-    "%cd tutorial"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "* La estructura resultante sería algo similar a lo siguiente:\n",
     "\n",
     "```\n",
-    ".\n",
+    "tutorial\n",
     "├── manage.py\n",
     "└── tutorial\n",
     "    ├── __init__.py\n",
@@ -245,7 +227,7 @@
     "    └── wsgi.py\n",
     "```\n",
     "\n",
-    "* Se puede apreciar que en el directorio *tutorial* es encuentran:\n",
+    "* Se puede apreciar que en el directorio ```tutorial``` se encuentran:\n",
     "    * El script ```manage.py```\n",
     "    * Otro subdirectorio de nombre ```tutorial``` con la estructura de un paquete de Python."
    ]
@@ -280,6 +262,29 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* La siguiente celda moverá la ejecución de la notebook al directorio ```tutorial```."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%cd tutorial"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* La siguiente celda desplegará el contenido del script ```manage.py```."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -299,7 +304,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* En vista de que el directorio de ejecución de esta notebook fue cambiado al subdirectorio ```prueba```, se ejecutará el script ```manage.py``` de la forma siguiente:"
+    "* En vista de que el directorio de ejecución de esta notebook fue cambiado al subdirectorio ```tutorial```, se ejecutará el script ```manage.py``` de la forma siguiente:"
    ]
   },
   {
@@ -363,18 +368,25 @@
     "scrolled": true
    },
    "source": [
-    "La estructura de archivos del directorio ```tutorial/main``` resultante sería algo similar a lo siguiente:\n",
+    "La estructura de archivos del directorio ```tutorial``` resultante sería algo similar a lo siguiente:\n",
     "\n",
     "```\n",
-    "main\n",
-    "├── admin.py\n",
-    "├── apps.py\n",
-    "├── __init__.py\n",
-    "├── migrations\n",
-    "│   └── __init__.py\n",
-    "├── models.py\n",
-    "├── tests.py\n",
-    "└── views.py\n",
+    "tutorial/\n",
+    "├── main\n",
+    "│   ├── admin.py\n",
+    "│   ├── apps.py\n",
+    "│   ├── __init__.py\n",
+    "│   ├── migrations\n",
+    "│   │   └── __init__.py\n",
+    "│   ├── models.py\n",
+    "│   ├── tests.py\n",
+    "│   └── views.py\n",
+    "├── manage.py\n",
+    "└── tutorial\n",
+    "    ├── __init__.py\n",
+    "    ├── settings.py\n",
+    "    ├── urls.py\n",
+    "    └── wsgi.py\n",
     "```"
    ]
   },
