--- a/05_urls_y_funciones_de_vista.ipynb
+++ b/05_urls_y_funciones_de_vista.ipynb
@@ -49,11 +49,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Configuración del archivo```urls.py``` de un proyecto.\n",
+    "### Configuración del script ```urls.py``` de un proyecto.\n",
     "\n",
-    "Los proyectos de *Django* siempre deben de hacer referencia a al menos un archivo ```urls.py``` el cual se importaría como un módulo y a partir del cual pueden ser mapeadas las *URLs* del proyecto y de sus aplicaciones.\n",
+    "Los proyectos de *Django* siempre deben de hacer referencia a al menos un script ```urls.py``` el cual se importaría como un módulo y a partir del cual pueden ser mapeadas las *URLs* del proyecto y de sus aplicaciones.\n",
     "\n",
-    "La localización de este archivo es definda con la variable ```ROOT_URLCONF``` del archivo ```settings.py``` del proyecto."
+    "La localización de este script es definda con la variable ```ROOT_URLCONF``` del script ```settings.py``` del proyecto."
    ]
   },
   {
@@ -62,7 +62,7 @@
    "source": [
     "**Ejemplo:**\n",
     "\n",
-    "* En caso de haber ejecutado correctamente todas las celdas de la notebook [```01_introduccion_a_django.ipynb```](01_introduccion_a_django.ipynb), la variable ```settings.ROOT_URLCONF``` indicaría que el script  ```'tutorial.urls'```"
+    "* Las siguientes celdas desplegarán el valor de la variable ```ROOT_URLCONF``` del módulo ```tutorial.tutorial.settings```."
    ]
   },
   {
@@ -141,24 +141,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import django.urls"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "help(django.urls)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -185,7 +167,7 @@
     "\n",
     "En los lenguajes de programación como en el caso de *C*, se utliza la palabra clave *include* cuando se desea importar algún módulo de forma similar a la palabra reservada de Python ```import```. \n",
     "\n",
-    "En este caso, la función ```django.urls.include()``` permite importar un archivo con una estructura de un script ```urls.py``` localizado en otra ruta como si fuera un módulo dentro de un paquete.\n",
+    "En este caso, la función ```django.urls.include()``` permite importar un script con una estructura de un script ```urls.py``` localizado en otra ruta como si fuera un módulo dentro de un paquete.\n",
     "\n",
     "``` python\n",
     "django.urls.include('<patrón>', include('<módulo>')\n",
@@ -256,9 +238,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Configuración del archivo ```tutorial/tutorial/urls.py```.\n",
+    "### Configuración del script ```tutorial/tutorial/urls.py```.\n",
     "\n",
-    "El archivo ```src/05/tutorial_urls.py``` contiene el siguiente código:\n",
+    "El script ```src/05/tutorial_urls.py``` contiene el siguiente código:\n",
     "\n",
     "``` python\n",
     "from django.contrib import admin\n",
@@ -276,7 +258,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* La siguiente celda sustituirá al archivo ```tutorial/tutorial/urls.py``` con el archivo ```src/tutorial_urls.py```."
+    "* La siguiente celda sustituirá al script ```tutorial/tutorial/urls.py``` con el script ```src/tutorial_urls.py```."
    ]
   },
   {
@@ -317,7 +299,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* La siguiente celda desplegará los cambios en el archivo ```tutorial\\tutorial\\urls.py```."
+    "* La siguiente celda desplegará los cambios en el script ```tutorial\\tutorial\\urls.py```."
    ]
   },
   {
@@ -333,12 +315,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Configuración del archivo ```tutorial/main/urls.py```.\n",
+    "### Configuración del script ```tutorial/main/urls.py```.\n",
     "\n",
     "En vista de que ```tutorial/tutorial/urls.py``` cargará como módulo el contenido de \n",
-    "```tutorial/main/urls.py``` es necesario que el archivo de referencia exista.\n",
+    "```tutorial/main/urls.py``` es necesario que el script de referencia exista.\n",
     "\n",
-    "El archivo ```src/05/main_urls.py``` contiene el siguiente código:\n",
+    "El script ```src/05/main_urls.py``` contiene el siguiente código:\n",
     "\n",
     "``` python\n",
     "from django.urls import path\n",
@@ -351,7 +333,7 @@
     "Este código indica lo siguiente: \n",
     "\n",
     "* Importar la función ```django.urls.path()```.\n",
-    "* Importar el módulo ```views``` localizado en el mismo directorio donde se encuentra el archivo ```tutorial/main/urls.py``` (denotado por el punto ```.```). \n",
+    "* Importar el módulo ```views``` localizado en el mismo directorio donde se encuentra el script ```tutorial/main/urls.py``` (denotado por el punto ```.```). \n",
     "* La lista ```urlpatterns``` definen dos patrones de rutas:\n",
     "   * La ruta de ```main/```, la cual se denota por una cadena de caracteres vacía ```''```, ligándola a la función ```views.index()```.\n",
     "   * La ruta de ```main/vista```, la cual se denota por una cadena de caracteres ```'vista'```, ligándola a la función ```views.vista()```."
@@ -361,7 +343,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* La siguiente celda copiará el archivo ```src/05/main_urls.py``` a ```tutorial/main/urls.py```."
+    "* La siguiente celda copiará el script ```src/05/main_urls.py``` a ```tutorial/main/urls.py```."
    ]
   },
   {
@@ -402,7 +384,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* La siguiente celda desplegará los cambios en el archivo ```tutorial\\main\\urls.py```."
+    "* La siguiente celda desplegará los cambios en el script ```tutorial\\main\\urls.py```."
    ]
   },
   {
@@ -422,20 +404,21 @@
     "\n",
     "Una vez que un cliente envía una petición a una *URL* gestionada por el servidor de *Django* ocurre lo siguiente:\n",
     "\n",
-    "* El servidor verifica que la *URL* coincida con alguno de los patrones definidos en los archivos ```urls.py```. \n",
-    "* En caso de que exista una coincidencia, se ejecutará la función de vista correspondiente de la siguiente forma:\n",
-    "    * Ingresando un objeto ```request``` como primer argumento. \n",
-    "    * La función deberá de regresar un objeto ```response```. Dicho objeto será utilizado como base para que el servidor transmita una respuesta al cliente que hizo la petición.\n",
-    "* En caso de que no exista un patrón que coincida con la *URL* de la petición, se gestionará un código de estado ```404```."
+    "* El servidor verifica que la *URL* coincida con alguno de los patrones definidos en los scripts ```urls.py```. \n",
+    "* En caso de que exista una coincidencia, ocurrir;a lo siguiente:\n",
+    "    * El srrvidor creará un objeto ```request``` a partir de la petición.\n",
+    "    * El servidor  ejecutará la función de vista ligada al patron de *URL*, ingresando al objeto ```request``` como primer argumento. \n",
+    "    * La función de vista deberá de regresar un objeto ```response```. Dicho objeto será utilizado por el servidor para transmitir una respuesta al cliente que hizo la petición.\n",
+    "* En caso de que no existiera un patrón que coincida con la *URL* de la petición, se gestionará un código de estado ```404```."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Los scripts *views.py*.\n",
+    "## Los scripts ```views.py```.\n",
     "\n",
-    "*Django* define en su estructura de archivos ```views.py```, los cuales contienen a las funciones de vista que gestionarán las peticiones hechas a las *URLs* a las que están ligadas."
+    "*Django* define en su estructura de scripts ```views.py```, los cuales contienen a las funciones de vista que gestionarán las peticiones hechas a las *URLs* a las que están ligadas."
    ]
   },
   {
@@ -444,9 +427,15 @@
    "source": [
     "**Ejemplo:**\n",
     "\n",
-    "El archivo ```tutorial/main/views.py``` es referido como un módulo en el archivo ```tutorial/main/urls.py```.\n",
+    "El script ```tutorial/main/views.py``` es referido como un módulo en el script ```tutorial/main/urls.py```.\n",
     "\n",
-    "Hasta el momento, este archivo no contiene ninguna función."
+    "Hasta el momento, este script no contiene ninguna función y su código se vería similar a lo siguiente:\n",
+    "\n",
+    "```\n",
+    "from django.shortcuts import render\n",
+    "\n",
+    "# Create your views here.\n",
+    "```"
    ]
   },
   {
@@ -487,7 +476,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "El archivo ```src/05/views.py``` contiene lo siguiente:\n",
+    "El script ```src/05/views.py``` contiene lo siguiente:\n",
     "\n",
     "``` python\n",
     "from django.http import HttpResponse\n",
@@ -511,7 +500,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* La siguiente celda sustituirá al archivo ```tutorial/main/views.py``` con el archivo ```src/05/views.py```."
+    "* La siguiente celda sustituirá al script ```tutorial/main/views.py``` con el script ```src/05/views.py```."
    ]
   },
   {
@@ -622,7 +611,7 @@
     "\n",
     "* Al acceder a cualquier otra *URL* distinta a las indicadas, se mostrará un mensaje de estado ```404```.  Debido a que *Django* está configurado en modo de depuracion, desplegará los detalles y los patrones de ```URL``` válidos.\n",
     "\n",
-    "El navegador desplegará algo similar a la siguiente imagen:\n",
+    "En este caso, el navegador desplegará algo similar a la siguiente imagen cuando se trate de acceder a la *URL* http://localhost:8000/main/incorrecto:\n",
     "\n",
     "<img src=\"imagenes/05/404.png\" width=\"600px\">"
    ]
