--- a/06_peticiones_y_respuestas.ipynb
+++ b/06_peticiones_y_respuestas.ipynb
@@ -27,11 +27,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Sesiones.\n",
+    "## Conexiones.\n",
     "\n",
-    "Si un cliente cuenta con las credenciales y los permisos adecuados, éste puede iniciar una sesión con un servidor. \n",
+    "Si un cliente cuenta con las credenciales y los permisos adecuados, éste puede iniciar una conexion con un servidor. \n",
     "\n",
-    "Una sesión consiste en intercambio de peticiones (requests) y respuestas (responses) entre un cliente y un servidor.\n",
+    "Una conexión consiste en intercambio de peticiones (requests) y respuestas (responses) entre un cliente y un servidor.\n",
     "\n",
     "**Nota:** En capítulos subsecuentes se estudiarán temas relacionados a la creación de sesiones seguras y a la autenticación de usuarios."
    ]
@@ -49,7 +49,9 @@
     "* A la clase ```django.http.JsonResponse```.\n",
     "* A algunas clases que permiten gestionar algunos códigos de estado de *HTTP* distintos a ```200```.\n",
     "\n",
-    "La referencia a estas clases puede ser consultada desde https://docs.djangoproject.com/en/2.2/ref/request-response/"
+    "La referencia a estas clases puede ser consultada desde la siguiente liga:\n",
+    "\n",
+    "https://docs.djangoproject.com/en/2.2/ref/request-response/"
    ]
   },
   {
@@ -62,7 +64,7 @@
     "\n",
     "* Cuando el servidor de *Django* recibe una petición que coincide con un patrón de *URL*, este instancia un objeto ```request``` y lo ingresa a la función de vista relacionada al patrón de *URL* como primer argumento.\n",
     "* El estado de un objeto ```request``` contiene información de la petición formulada desde un cliente y recibida por el servidor de *Django*.\n",
-    "* Los objetos ```request``` cuentan con métodos que nos permiten gestionar los datos de las peticiones."
+    "* Los objetos ```request``` cuentan con métodos que permiten gestionar los datos de las peticiones."
    ]
   },
   {
@@ -74,15 +76,16 @@
     "* ```scheme```: el cual contiene una cadena de caracteres que describe el esquema de autenticación utilizado para la conexión conforme a la [*RFC7617*](https://tools.ietf.org/html/rfc7617). Generalmente es ```'http'``` o ```'https'```. \n",
     "* ```body```: el cual contiene datos que han sido enviados dentro de la petición en formato binario, como imágenes, videos, etc.\n",
     "* ```encoding```: el cual contiene una cadena de caracteres con los datos de codificación de la petición.\n",
-    "* ```path```: el cual contiene una cadena de caracteres de la ruta del recurso en el servidor sin incluir el esquema o el dominio.\n",
+    "* ```path```: el cual contiene una cadena de caracteres de la ruta del recurso.\n",
     "* ```path_info```: ofrece información de la ruta capaz de ser procesada por diversos servidores web.\n",
     "* ```method```: el cual contiene una cadena de caracteres que indica el método utilizado para enviar la petición.\n",
-    "* ```content_type```: el contiene una cadena de caracteres la cual indica el tipo de contenido de la petición. Los tipos MIME que pueden ser enviados pueden ser consultados en https://developer.mozilla.org/es/docs/Web/HTTP/Basics_of_HTTP/MIME_types.\n",
+    "* ```content_type```: el contiene una cadena de caracteres corresondiente al encabezado ```Content-Type``` de la petición.\n",
+    "* ```content_params```: contiene un objeto de tipo ```dict```el cual contiene los pares del encabezado ```Content-Type```.\n",
     "* ```resolver_match```: Contiene una cadena de caracteres con la *URL*.\n",
-    "* ```content_params```: contiene un diccionario con la definición de tipo de contenido en formato ```clave:valor```.\n",
-    "* ```COOKIES```: contiene un objeto ```dict``` con las cookies enviadas en la petición.\n",
+    "* ```COOKIES```: contiene un objeto tipo ```dict``` con las cookies enviadas en la petición.\n",
     "* ```FILES```: contiene un diccionario con los datos de los archivos enviados en la petición.\n",
-    "* ```META```: Contiene un objeto tipo ```dict``` con una serie de datos los cuales pueden ser consultados en https://docs.djangoproject.com/en/2.2/ref/request-response/#django.http.HttpRequest.META.\n",
+    "* ```META```: Contiene un objeto tipo ```dict``` con una serie de datos los cuales pueden ser consultados en \n",
+    "https://docs.djangoproject.com/en/2.2/ref/request-response/#django.http.HttpRequest.META.\n",
     "* ```GET```: contiene un objeto de clase ```django.http.QueryDict``` con los parámetros enviados mediante el método ```GET```.\n",
     "* ```POST```: contiene un objeto de clase ```django.http.QueryDict``` con los parámetros enviados mediante el método ```POST```.\n",
     "\n",
@@ -95,13 +98,17 @@
    "source": [
     "## Los objetos ```response```.\n",
     "\n",
-    "Las funciones de vista\n",
+    "El servidor de *Django* es capaz de producir y enviar un mensaje de respuesta al cliente a partir de los objetos ```response```. Las funciones de vista deben de regresar un objeto ```response``` o se generará una excepción de tipo ```ValueError```, la cual enviará un estado ```500``` al cliente que envió la petición."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### La clase ```django.http.HttpResponse```.\n",
     "\n",
-    "La clase ```django.http.HttpResponse```.\n",
+    "Existen diversas clases capaces de instanciar objetos ```response``` y todas ellas son subclases de ```django.http.HttpResponse```. Es decir que ```django.http.HttpResponse``` es la clase base de los objetos ```response```.\n",
     "\n",
-    "Existen diversos tipos de respuestas (responses) que *Django* puede enviar a un cliente. Sin embargo, casi todos los objetos ```response``` son instancias de subclases de ```django.http.HttpResponse```.\n",
-    "\n",
-    "Las funciones de vista deben de regresar objetos instanciados de dichas clases.\n",
     "\n",
     "La siguiente es la sintaxis para instanciar un objeto a partir de la clase  ```django.http.HttpResponse```:\n",
     "```\n",
@@ -117,7 +124,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Atributos de la clase ```django.http.HttpResponse```.\n",
+    "### Atributos de los objetos ```response```.\n",
+    "\n",
+    "Los objetos ```response``` tiene  al menos los siguientes atribuos:\n",
     "\n",
     "* ```content```: el cual almacena el contenido que será emviado al cliente.\n",
     "* ```charset```: el cual inidica la codificación de caracteres (charset) al que corresponde el contenido. En caso de no indicar nada, se usará el charset del cliente.\n",
@@ -133,7 +142,7 @@
    "source": [
     "## Ejemplo ilustrativo.\n",
     "\n",
-    "El archivo ```src/06/views.py```  contiene el siguiente código:\n",
+    "El script ```src/06/views.py```  contiene el siguiente código:\n",
     "\n",
     "``` python\n",
     "from django.http import HttpResponse\n",
@@ -158,14 +167,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* La siguiente celda sustituirá al archivo ```tutorial/main/views.py``` con el archivo ```src/06/views.py```."
+    "* Las siguientes celda sustituirá al script ```tutorial/main/views.py``` con el script ```src/06/views.py```."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* Para las plataformas GNU/Linux y MacOS X. "
+    "* Para las plataformas Linux y MacOS X. "
    ]
   },
   {
@@ -186,27 +195,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "        1 archivo(s) copiado(s).\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!copy src\\06\\views.py tutorial\\main\\views.py"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* La siguiente celda desplegará las modificaciones al scirpt ```tutorial/main/views.py```."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "scrolled": true
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "%pycat tutorial/main/views.py"
@@ -216,54 +222,42 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* Las siguientes celdas iniciarán el servidor."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\josech\\Dropbox\\Documentos\\py201\\tutorial\n"
-     ]
-    }
-   ],
-   "source": [
-    "%cd tutorial"
+    "## Arranque desde una terminal.\n",
+    "\n",
+    "* Desde una terminal diríjase al directorio ```tutorial```, en el cual se encuentra el script ```manage.py```.\n",
+    "* Ejecute el siguiente comando:\n",
+    "\n",
+    "\n",
+    "```\n",
+    "python manage.py runserver 0.0.0.0:8000\n",
+    "```\n",
+    "\n",
+    "**Nota:** \n",
+    "Es necesario que el firewall de su equipo esté configurado para transmitir desde el puerto ```8000```. "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**ADVERTENCIAS:** \n",
-    "\n",
-    "* Al ejecutar la siguiente celda el servidor se inciará desde la notebook, por lo que para ejecutar cualquier otra celda es necesario interrumpir la ejecución del kernel.\n",
-    "\n",
-    "* Asegúrese que no haya otro servicio escuchando en el puerto *5000*."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [],
-   "source": [
-    "!python manage.py runserver 0.0.0.0:5000"
+    "## Resultados."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* Al acceder a [http://localhost:5000/main/vista](http://localhost:5000/main/vista) se mostrará el método usado por el cliente.\n",
-    "* Al acceder a [http://localhost:5000/main/vista?nombre=jose](http://localhost:5000/main/vista?nombre=jose) se mostrará el método usado por el cliente."
+    "* Al acceder a http://localhost:8000/main/vista el navegador mostrará lo siguiente.\n",
+    "\n",
+    "<img src=\"imagenes/06/vista.png\" width=\"600\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Al acceder a http://localhost:8000/main/vista?nombre=Juan&apellido=Perez el navegador mostrará lo siguiente.\n",
+    "<img src=\"imagenes/06/vista-nombre.png\" width=\"600\">"
    ]
   },
   {
