--- a/07_patrones_de_urls.ipynb
+++ b/07_patrones_de_urls.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Gestión de *URLs*."
+    "# Patrones de *URLs*."
    ]
   },
   {
@@ -29,14 +29,16 @@
    "source": [
     "El módulo ```django.urls``` cuenta con herramientas que permiten identificar y filtrar *URLs*  de modo tal que pueda crear servicios dinámicos a partir de la información contenida en ellos.\n",
     "\n",
-    "La documentacióm corresondiente puede ser consultada en https://docs.djangoproject.com/en/2.2/topics/http/urls/"
+    "La documentacióm correspondiente puede ser consultada en la siguiente liga:\n",
+    "\n",
+    "https://docs.djangoproject.com/en/2.2/topics/http/urls/"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Identificación de segmentos en una *URL*.\n",
+    "## Identificación de segmentos en la ruta de una *URL*.\n",
     "\n",
     "Previamente se estudió la funcionalidad básica de ```django.urls.path()``` realizando las siguientes operaciones:\n",
     "\n",
@@ -50,21 +52,29 @@
     "django.urls.path('<patrón>', <funcion de vista>, <kwargs>)\n",
     "```\n",
     "\n",
-    "* Donde  ```<patrón>``` es una cadena de cartacteres que debe de coincidir con la *URL*. "
+    "Donde:\n",
+    "* ```<patrón>``` es una cadena de cartacteres que debe de coincidir con la *URL*. \n",
+    "* ```<función de vista>``` es la referencia a la función de vista al auq está relacionada el patrón.\n",
+    "* ```<kwargs>``` son otros argumentos expresados como ```<nombre>=<valor>```."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Segmentos indentificables en una *URL*.\n",
+    "### Extracción de segmentos identificables en la ruta de una *URL*.\n",
     "\n",
     "La función ```django.urls.path()``` puede:\n",
     "* Identificar segmentos de caracteres delimitados por el caracter ```/```.\n",
     "* Convertir cada cadena de caracteres segmentada en un tipo de dato específico.\n",
-    "* Asignarle un nombre a cada valor obtenido.\n",
-    "\n",
-    "### Tipos de datos extraibles de un segmento de *URL*:\n",
+    "* Asignarle un nombre a cada valor obtenido."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Tipos de datos extraibles de un segmento de ruta de una *URL*:\n",
     "\n",
     "Los tipos de datos en los que puede ser convertido un segmento son los siguiientes:\n",
     "\n",
@@ -81,7 +91,7 @@
    "source": [
     "**Ejemplo:**\n",
     "\n",
-    "* La *URL* ```main/53/azul/01``` puede ser segmentada obteniendo las cadenas de caracteres:\n",
+    "* La ruta ```main/53/azul/01``` puede ser segmentada obteniendo las siguientes cadenas de caracteres a partir de ```main/```:\n",
     "    * ```'53'```.\n",
     "    * ```'azul'```.\n",
     "    * ```'01'```.\n",
@@ -92,9 +102,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Definción del patrón de extracción de segmentos.\n",
+    "### Definición del patrón de extracción de segmentos.\n",
     "\n",
-    "La cadena de caracteres que define a un patrón con sefgmentos extaibles tend'ria una sintaxcis similar a la siguiente:\n",
+    "La cadena de caracteres que define a un patrón con segmentos extraibles tendría una sintaxis similar a la siguiente:\n",
     "\n",
     "```\n",
     "'<patrón inicial>/<segmento 1>/<segmento 2>/.../<segmento n>'\n",
@@ -102,8 +112,8 @@
     "\n",
     "Donde:\n",
     "\n",
-    "* ```<patrón inicial>``` es un patrón específico que debe de coincidir en la URL.\n",
-    "* ```<segmento X>``` corresponde a cada segmento a extraer."
+    "* ```<patrón inicial>``` es un patrón específico que debe de coincidir con el primer segmento de la ruta.\n",
+    "* ```<segmento x>``` corresponde a cada segmento a extraer."
    ]
   },
   {
@@ -158,9 +168,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### El archivo ```src/07/urls.py```.\n",
+    "### El script ```src/07/urls.py```.\n",
     "\n",
-    "El archivo ```src/07/urls.py``` contiene lo siguiente:\n",
+    "El script ```src/07/urls.py``` contiene lo siguiente:\n",
     "\n",
     "\n",
     "``` python\n",
@@ -183,14 +193,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* A continuación se sustituirá al archivo ```tutorial/main/urls.py```  con el archivo ```src/07/urls.py```."
+    "* A continuación se sustituirá al script ```tutorial/main/urls.py```  con el script ```src/07/urls.py```."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* Para la plataforma GNU/Linux y MacOS X."
+    "* Para la plataforma Linux y MacOS X."
    ]
   },
   {
@@ -219,21 +229,28 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* La siguiente celda desplegará las modificaciones al script ```tutorial/main/urls.py```."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "%pycat tutorial\\main\\urls.py "
+    "%pycat tutorial/main/urls.py"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### El archivo ```src/07/views.py```.\n",
+    "### El script ```src/07/views.py```.\n",
     "\n",
-    "El archivo ```src/07/views.py``` contiene el siguiente código:\n",
+    "El script ```src/07/views.py``` contiene el siguiente código:\n",
     "\n",
     "``` python\n",
     "from django.http import HttpResponse\n",
@@ -264,14 +281,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* A continuación se sustituirá al archivo ```tutorial/main/views.py```  con el archivo ```src/07/views.py```."
+    "* A continuación se sustituirá al script ```tutorial/main/views.py```  con el script ```src/07/views.py```."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* Para la plataforma GNU/Linux y MacOS X."
+    "* Para las plataformas Linux y MacOS X."
    ]
   },
   {
@@ -280,7 +297,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!cp src/07/views.py tutorial/main/views.py "
+    "!cp src/07/views.py tutorial/main/views.py"
    ]
   },
   {
@@ -300,19 +317,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%pycat tutorial/main/views.py "
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* A continuación se iniciará el servidor de *Django*."
+    "* La siguiente celda desplegará las modificaciones al script ```tutorial/main/views.py```."
    ]
   },
   {
@@ -321,42 +329,68 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%cd tutorial"
+    "%pycat tutorial/main/views.py"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**ADVERTENCIAS:** \n",
+    "## Arranque desde una terminal.\n",
     "\n",
-    "* Al ejecutar la siguiente celda el servidor se inciará desde la notebook, por lo que para ejecutar cualquier otra celda es necesario interrumpir la ejecución del kernel.\n",
+    "* Desde una terminal diríjase al directorio ```tutorial```, en el cual se encuentra el script ```manage.py```.\n",
+    "* Ejecute el siguiente comando:\n",
     "\n",
-    "* Asegúrese que no haya otro servicio escuchando en el puerto *5000*."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "!python manage.py runserver 0.0.0.0:5000"
+    "\n",
+    "```\n",
+    "python manage.py runserver 0.0.0.0:8000\n",
+    "```\n",
+    "\n",
+    "**Nota:** \n",
+    "Es necesario que el firewall de su equipo esté configurado para transmitir desde el puerto ```8000```. "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* La URL *http://localhost:5000/main/claves/12345678* ejecutará la función *views.numero()*.\n",
+    "## Resultados."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* La *URL* http://localhost:8000/main/claves/12345678 ejecutará la función ```tutorial.main.views.numero()``` en vista de que el segmento posterior a ```main/claves/``` contiene un número de 8 dígitos.\n",
     "\n",
-    "* La URL *http://localhost:5000/main/claves/0* ejecutará la función *views.numero()*.\n",
+    "<img src=\"imagenes/07/clave-12345678.png\" width=\"600\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* La *URL* http://localhost:8000/main/claves/12 ejecutará la función ```tutorial.main.views.numero()``` en vista de que el segmento posterior a ```main/claves/``` contiene un número de 2 dígitos.\n",
     "\n",
-    "* La URL *http://localhost:5000/main/claves/1234* ejecutará la función *views.clave()*.\n",
+    "<img src=\"imagenes/07/clave-12.png\" width=\"600\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* La *URL* http://localhost:8000/main/claves/1234 ejecutará la función ```tutorial.main.views.clave()``` en vista de que el segmento posterior a ```main/claves/``` contiene un número de 4 dígitos.\n",
     "\n",
-    "* La URL *http://localhost:5000/main/claves/Juan* ejecutará la función *views.saluda()*."
+    "<img src=\"imagenes/07/clave-1234.png\" width=\"600\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* La *URL* *http://localhost:8000/main/claves/Juan* ejecutará la función ```tutorial.main.views.saluda()``` en vista de que el segmento posterior a ```main/claves/``` contiene una cadena de caracteres.\n",
+    "\n",
+    "<img src=\"imagenes/07/clave-juan.png\" width=\"600\">"
    ]
   },
   {
