--- a/08_json_con_django.ipynb
+++ b/08_json_con_django.ipynb
@@ -32,7 +32,9 @@
     "\n",
     "*JSON* es el acrónimo de Javascript Object Notation y antes de las modificaciones publicadas en el estándar [*ECMAScript 2015*](https://www.ecma-international.org/ecma-262/6.0/), correspondía al modo en el que se definen objetos en Javascript. Sin embargo, la notación es tan simple y práctica que ha sido adoptada como un formato para la transmisión de datos y ha evolucionado de forma paralela a Javascript.\n",
     "\n",
-    "Para aprender más acerca de *JSON* puede consultar esta liga: https://www.w3schools.com/js/js_json_intro.asp"
+    "Para aprender más acerca de *JSON* es posible consultar la siguiente liga:\n",
+    "\n",
+    "https://www.w3schools.com/js/js_json_intro.asp"
    ]
   },
   {
@@ -405,7 +407,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* Para la plataforma GNU/Linux o MacOS X."
+    "* Para la plataforma Linux o MacOS X."
    ]
   },
   {
@@ -467,7 +469,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* Para la plataforma GNU/Linux y MacOS X."
+    "* Para las plataformas Linux y MacOS X."
    ]
   },
   {
@@ -546,7 +548,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "El resultado puede observarser en http://localhost:5000/main/json\n",
+    "El resultado puede observarse en http://localhost:5000/main/json\n",
     "\n",
     "El resultado puede observarser en http://localhost:5000/main/json?nombre=juan&apellido=perez"
    ]
