--- a/09_objetos_request_y_response.ipynb
+++ b/09_objetos_request_y_response.ipynb
@@ -124,9 +124,6 @@
     "\n",
     "#### Métodos de gestión.\n",
     "\n",
-    "* ```__setitem__()```.\n",
-    "* ```__getitem__()```.\n",
-    "* ```_contains__()```.\n",
     "* ```get()```.\n",
     "* ```dict()``` convierte el contenido del objeto ```django.http.QueryDict``` en un objeto tipo ```dict```.\n",
     "* ```copy()```.\n",
@@ -160,13 +157,8 @@
     "\n",
     "#### Métodos de gestión.\n",
     "\n",
-    "* ```__setitem__()```\n",
-    "* ```__getitem__()```\n",
-    "* ```__delitem__()```\n",
     "* ```has_header()```\n",
     "* ```setdefault()```\n",
-    "\n",
-    "\n",
     "\n",
     "#### Métodos de gestión de *cookies*.\n",
     "\n",
@@ -349,7 +341,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* Para la plataforma GNU/Linux y MacOS X."
+    "* Para la plataforma Linux y MacOS X."
    ]
   },
   {
@@ -392,57 +384,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* Iniciar el servidor."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%cd tutorial"
+    "http://localhost:8000/main/error"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**ADVERTENCIAS:** \n",
+    "http://localhost:8000/main/listas\n",
     "\n",
-    "* Al ejecutar la siguiente celda el servidor se inciará desde la notebook, por lo que para ejecutar cualquier otra celda es necesario interrumpir la ejecución del kernel.\n",
-    "\n",
-    "* Asegúrese que no haya otro servicio escuchando en el puerto *5000*."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "! ./manage.py runserver 0.0.0.0:5000"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "http://localhost:5000/main/error\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "http://localhost:5000/main/listas\n",
-    "\n",
-    "http://localhost:5000/main/listas?nombre=jose&apellido=perez\n",
+    "http://localhost:5000/main/listas?nombre=Juan&apellido=Perez\n",
     "\n",
     "\n",
-    "http://localhost:5000/main/listas?nombre=jose&apellido=perez&nombre=Jesus&nombre=Pablo"
+    "http://localhost:5000/main/listas?nombre=Juan&apellido=Perez&nombre=Jesus&nombre=Pablo"
    ]
   },
   {
