--- a/11_shell_de_django.ipynb
+++ b/11_shell_de_django.ipynb
@@ -41,11 +41,52 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Ejemplo ilustrativo."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "``` ipython\n",
+    "In [1]: from django.http import HttpRequest, QueryDict, JsonResponse\n",
+    "\n",
+    "In [2]: import json\n",
+    " \n",
+    "In [3]: from main.views import vista\n",
+    "   \n",
+    "In [4]: peticion = HttpRequest()\n",
+    "\n",
+    "In [5]: peticion.GET=QueryDict(query_string=\"nombre=Juan&apellido=Pérez\")\n",
+    "\n",
+    "In [6]: respuesta = vista(peticion)\n",
+    "\n",
+    "In [7]: type(respuesta)\n",
+    "Out[7]: django.http.response.HttpResponse\n",
+    "\n",
+    "In [8]: respuesta.status_code\n",
+    "Out[8]: 200\n",
+    "\n",
+    "In [9]: respuesta.content\n",
+    "Out[9]: b\"<ul><li>URL: </li><li>M\\xc3\\xa9todo: None</li><li>Codificaci\\xc3\\xb3n: None</li><li>Argument\n",
+    "os: {'nombre': 'Juan', 'apellido': 'P\\xc3\\xa9rez'}</li></ul>\"\n",
+    "    \n",
+    "In [10]: respuesta_json = JsonResponse({'nombre':'Juan',\n",
+    "    ...: 'apellido':'Pérez',\n",
+    "    ...: 'calificaciones':[7.5, 9.2, 6, 8.3]})\n",
+    "\n",
+    "In [11]: respuesta_json.content\n",
+    "Out[11]: b'{\"nombre\": \"Juan\", \"apellido\": \"P\\\\u00e9rez\", \"calificaciones\": [7.5, 9.2, 6, 8.3]}'\n",
+    "\n",
+    "In [12]: json.loads(str(respuesta_json.content, 'utf-8'))\n",
+    "Out[12]: {'nombre': 'Juan', 'apellido': 'Pérez', 'calificaciones': [7.5, 9.2, 6, 8.3]}\n",
+    "\n",
+    "In [13]:\n",
+    "```"
+   ]
   },
   {
    "cell_type": "markdown",
