--- a/12_configuracion_de_bases_de_datos.ipynb
+++ b/12_configuracion_de_bases_de_datos.ipynb
@@ -164,14 +164,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Ejemplo Ilustrativo."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### La base de datos de *SQLite*."
+    "## Ejemplo ilustrativo."
    ]
   },
   {
