--- a/13_modelos_de_django.ipynb
+++ b/13_modelos_de_django.ipynb
@@ -14,7 +14,7 @@
     "**ADVERTENCIAS:** \n",
     "\n",
     "* Para poder realizar exitosamente los ejercicios de esta notebook, es necesario haber seguido al pie de la letra y en orden sucesivo las instrucciones de todas las notebooks previas.\n",
-    "* Se da por sentado de que el sistema desde el que se ejecute esta notebook tiene instalado y habilitado un gestor de bases de datos *MySQL* o *MariaDB* con un usuario *root* acreditado."
+    "* Para facilitar la ejecución de los ejercicios se utuilizará la base de datos *SQLite* que viene configurada por defecto para el proyecto ```tutorial```."
    ]
   },
   {
@@ -33,7 +33,9 @@
     "* La clase puede mapear un atributo a una columna de una tabla.\n",
     "* Los objetos instanciados de estas clases son mapeados con un registro de la tabla en la que cada campo corresponde a un atributo mapeado del objeto.\n",
     "\n",
-    "La referencia completa sobre modelos  puede ser consultada en: https://docs.djangoproject.com/en/2.2/topics/db/models/"
+    "La referencia completa sobre modelos  puede ser consultada en:\n",
+    "\n",
+    "https://docs.djangoproject.com/en/2.2/topics/db/models/"
    ]
   },
   {
@@ -42,7 +44,7 @@
    "source": [
     "## La clase ```django.db.models.Model```.\n",
     "\n",
-    "La clase ```django.db.models.Model``` es la superclase a partir de la cual se pueden diseñar los modelos de *Django*."
+    "La clase ```django.db.models.Model``` es la clase base que hereda a los modelos que se definirán en una aplicación de *Django*."
    ]
   },
   {
@@ -67,7 +69,42 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Tipos de datos de los campos.\n",
+    "## Funcionamiento del mapeo entre los modelos y las bases de datos.\n",
+    "\n",
+    "Un modelo es una clase que hereda a ```django.db.models.Model```. El modelo es entonces ligado a una tabla en una base de datos.\n",
+    "\n",
+    "Es posible definir atributos de clase que corresponderán a una columna de la tabla del modelo.\n",
+    "\n",
+    "Los objetos instanciados del modelo pueden relacionarse a un registro en la tabla del modelo y cada atributo del objeto sería un campo del registro correspondiente.\n",
+    "\n",
+    "Un modelo se define de la siguiente forma:\n",
+    "\n",
+    "```\n",
+    "from django.db.models import Model\n",
+    "...\n",
+    "...\n",
+    "<modelo>(Model):\n",
+    "    <atributo 1>(<tipo de campo>, <kwargs>)\n",
+    "    <atributo 2>(<tipo de campo>, <kwargs>)\n",
+    "    ...\n",
+    "    ...\n",
+    "    <atributo n>(<tipo de campo>, <kwargs>)\n",
+    "    \n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##  Asignación de una tabla de la base de datos a un modelo."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Tipos de campos del ORM de *Django*.\n",
     "\n",
     "*Django* tiene la capacidad de extender los tipos de datos de Python así como los de cada gestor de bases de datos mendiante el uso de su propio gestor de modelos de objetos relacional, también conocido como *ORM* por sus siglas en inglés.\n",
     "\n",
@@ -95,19 +132,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Asignación de nombres de los campos de una tabla con respecto a los atributos de una clase.\n",
-    "\n",
-    "Al crear una subclase de ```django.db.models.Model```, dicha clase se liga automáticamente con una tabla en la base de datos.\n",
-    "\n",
-    "Es posible crear atributos que permitan ligarse con una columna de la tabla.\n",
-    "\n",
-    "Al instanciar un objeto a partir de una subclase de ```django.db.models.Model``` se crea  un registro en la tabla cuyos atributos son los campos correspondientes."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Los archivos ```models.py```.\n",
     "\n",
     "Estos archivos son los indicados por *Django* para la definición de modelos."
@@ -119,7 +143,14 @@
    "source": [
     "**Ejemplo:**\n",
     "\n",
-    "* El archivo ```tutorial/main/models.py``` contiene algo similar a lo siguiente:"
+    "* El archivo ```tutorial/main/models.py``` aún no cuenta con alguna definición de modelos y contendría algo similar a lo siguiente:\n",
+    "\n",
+    "```\n",
+    "from django.db import models\n",
+    "\n",
+    "# Create your models here.\n",
+    "\n",
+    "```\n"
    ]
   },
   {
@@ -370,6 +401,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%cd .."
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -381,15 +421,6 @@
    "metadata": {},
    "source": [
     "## Consulta de la base de datos *SQLite*."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%cd .."
    ]
   },
   {
